Centered everything and fixed styles issue

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
     <title>Chris's Website</title>
 </head>
 
@@ -13,16 +13,15 @@
 </div>
 
 <div class="greeting">
-    <h1>Hey there! My name is Chris</h1>
-        <!-- <p>Hingham, MA</p> ADD THIS IN LATER I WANT THE PADDING TO BE CLOSER TO THE h1-->
-    <h2>This is the start of my journey towards becoming a better programmer.</h2>
+    <h1>Hey there! My name is Chris Setiawan</h1>
+    <h3>Join me on my journey to become a better programmer!</h3>
 </div>
 
-<div class="facts">
+<!-- <div class="facts">
     <h3>Fun facts about myself!</h3>
     <ul>
         <li>
-            I just got back from 6 months in Amsterdam
+            I love to traveling!
         </li>
         <li>
             I love Cycling
@@ -31,7 +30,7 @@
             I play Ultimate Frisbee
         </li>
     </ul>
-</div>
+</div> -->
 
 <div class="connect"> <p>Please feel free to stay connected with me on 
     <a href="https://www.linkedin.com/in/christophert-setiawan/" target="_blank">Linkedin</a> | <a href="https://github.com/Chrissss23" target="_blank">GitHub</a> | <a href="https://www.instagram.com/chrissetiawan23/" target="_blank">Instagram</a></p>
